--- a/app/frontend/scss/object/project/_article_list_item.scss
+++ b/app/frontend/scss/object/project/_article_list_item.scss
@@ -10,11 +10,11 @@
   &__thumbnail {
     flex: 1;
     width: 20%;
-    margin-right: 1em;
+    padding: 1em;
   }
 
   &__body {
-    flex: 4;
+    flex: 3;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,7 +26,7 @@
   }
 
   &__title {
-    font-size: 3.2rem;
+    font-size: 2.8rem;
     font-weight: 700;
   }
 
