--- a/app/views/home/_capsule_toy.html.slim
+++ b/app/views/home/_capsule_toy.html.slim
@@ -6,6 +6,5 @@
       p どんな遊びが出てくるかは
       p 押してみてのお楽しみ!
     .p-capsule-toy-contents__btn
-      = link_to capsule_toys_path
-        button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide
-          <i class="fas fa-surprise fa-fw"></i>ガチャを引く
+      button.c-hand-write-btn.c-hand-write-btn--highlight.c-hand-write-btn--wide.js-capsule-toy.js-tooltip data-tippy-content='Asobiガチャ'
+        <i class="fas fa-surprise fa-fw"></i>ガチャを引く
