--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -70,6 +70,7 @@ mixin
 @import "./object/project/comment_form";
 @import "./object/project/comment_item";
 @import "./object/project/draft_item";
+@import "./object/project/error_page";
 @import "./object/project/footer";
 @import "./object/project/header";
 @import "./object/project/sticky_menu";
