--- a/app/views/settings/password/index.html.slim
+++ b/app/views/settings/password/index.html.slim
@@ -14,4 +14,4 @@
       .p-form-contents__input-field.c-text-field.c-text-field--password
         = f.password_field :password_confirmation, placeholder: '新しいパスワードを入力してください', class: 'c-text-field__input'
     .p-form-contents__submit
-      button.c-hand-write-btn type='submit' 変更する
+      button.c-hand-write-btn 変更する
