--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -63,6 +63,7 @@ mixin
 	project
 ================================*/
 
+@import "./object/project/about";
 @import "./object/project/anonymous_form";
 @import "./object/project/article_card";
 @import "./object/project/article_list_item";
