--- a/app/frontend/scss/application.scss
+++ b/app/frontend/scss/application.scss
@@ -74,6 +74,7 @@ mixin
 @import "./object/project/error_page";
 @import "./object/project/footer";
 @import "./object/project/header";
+@import "./object/project/hero_header";
 @import "./object/project/sticky_menu";
 @import "./object/project/tab_menu";
 @import "./object/project/user_list_item";
