--- a/app/views/home/_trend_articles.html.slim
+++ b/app/views/home/_trend_articles.html.slim
@@ -1,4 +1,4 @@
-.p-card-contents
+.p-card-contents.u-mb-3
   .p-card-contents__header
     h1 <i class="fas fa-dice fa-fw"></i>おすすめの遊び
   ul.p-card-contents__list
