--- a/app/views/home/_timeline.html.slim
+++ b/app/views/home/_timeline.html.slim
@@ -1,4 +1,4 @@
-.p-list-contents
+.p-list-contents.u-mb-3
   .p-list-contents__header
     h1 <i class="far fa-clock"></i>タイムライン
     ul.p-list-contents__list
@@ -10,3 +10,7 @@
       - else
         li.p-list-contents__list-item ユーザーやタグをフォローしてタイムラインを充実させましょう！
   .p-list-contents__footer
+
+// Userのネームフォーマッティング、name
+// Articleのタイトル、id_digest、時間のフォーマッティング
+// タグリスト
