remove タイムライン用のvueコンポーネントの削除
タイムラインをAjaxではなく普通の通信で実装する方向に変更

--- a/app/views/home/_tab_menu.html.slim
+++ b/app/views/home/_tab_menu.html.slim
@@ -4,5 +4,5 @@
       = link_to root_path, class: 'p-tab-menu__menu-item-wrapper c-link'
         p.p-tab-menu__item-text オススメの遊び
     li.p-tab-menu__menu-item class=('p-tab-menu__menu-item--linked' if action == :timeline)
-      = link_to root_path, class: 'p-tab-menu__menu-item-wrapper c-link'
+      = link_to timeline_home_index_path, class: 'p-tab-menu__menu-item-wrapper c-link'
         p.p-tab-menu__item-text タイムライン
