--- a/app/views/home/timeline.html.slim
+++ b/app/views/home/timeline.html.slim
@@ -4,7 +4,7 @@
 
 - if visitor.logged_in?
   = render partial: 'home/tab_menu', locals: { action: action_name.to_sym }
-= render partial: 'home/timeline', locals: { feed_items: @feed_items }
+= render partial: 'home/timeline_contents', locals: { feed_items: @feed_items }
 
 = content_for(:sidebar) do
   = render partial: 'home/capsule_toy'
