--- a/app/views/articles/_comments.html.slim
+++ b/app/views/articles/_comments.html.slim
@@ -12,13 +12,17 @@
             p.p-comment-item__datetime = relative_time comment.created_at
             - if visitor.myself? comment.user
               .p-comment-item__menu: delete-comment-button :comment-id="#{comment.id}"
-  - if visitor.logged_in?
+  - if visitor.register?
     .p-list-contents__footer.p-comment-form
       .p-comment-form__user-photo = user_photo visitor, size: 40, class_name: 'c-user-photo'
       = form_with model: Comment.new(user_id: visitor.id), local: true, class: 'p-comment-form__form' do |f|
         = f.hidden_field :article_id, value: article_id
         = f.text_area :content, placeholder: 'コメントを入力…', required: true, rows: 4, class: 'p-comment-form__text-area'
         .p-comment-form__submit: button.c-hand-write-btn 投稿する
+  - elsif visitor.temporary?
+    .p-list-contents__footer
+      .p-anonymous-form
+        h4.p-anonymous-form__title 本登録を完了させてコメントしてみましょう！
   - else
     .p-list-contents__footer
       .p-anonymous-form
