--- a/app/views/home/_timeline_contents.html.slim
+++ b/app/views/home/_timeline_contents.html.slim
@@ -7,5 +7,7 @@
           li.p-list-contents__list-item
             = render partial: 'home/timeline_item', locals: { article: item, messages: visitor.timeline_messages(item) }
       - else
-        li.p-list-contents__list-item ユーザーやタグをフォローしてタイムラインを充実させましょう！
+        li.p-list-contents__list-item
+          .p-anonymous-form
+            h4.p-anonymous-form__title ユーザーやタグをフォローしてタイムラインを充実させましょう！
   .p-list-contents__footer = paginate feed_items
