--- a/app/views/account_activations/index.html.slim
+++ b/app/views/account_activations/index.html.slim
@@ -8,7 +8,7 @@
     h2.p-account-activation-contents__email = visitor.email
     p.p-account-activation-contents__text メール本文に記載されているURLをクリックして会員登録を完了しましょう！
     .p-account-activation-contents__info
-      .p-account-activation-contents__help
+      / .p-account-activation-contents__help
         p 24時間を過ぎた場合、最初から登録をやり直して頂く必要があります。
         p 詳しくは#{link_to 'こちら', help_path, class: 'c-link'}をご覧ください。
       .p-account-activation-contents__resend
