--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,15 +8,18 @@ header#header.l-header
     .p-header__right
       ul.p-header__list
         - if visitor.logged_in?
+          - if visitor.temporary?
+            li.p-header__list-item
+              span.c-badge.c-badge--sub-highlight 仮登録
+          - elsif visitor.guest?
+            li.p-header__list-item
+              span.c-badge.c-badge--primary ゲスト
           li.p-header__list-item
             = link_to new_article_path, class: 'c-hand-write-btn c-hand-write-btn--dark-tone'
               <i class='fas fa-pen fa-fw'></i>投稿
           li.p-header__list-item.js-tooltip data-tippy-content='工事中...'
             = link_to '#', class: 'c-link c-link--global-nav'
               i.far.fa-bell.fa-lg
-          - if visitor.temporary?
-            li.p-header__list-item
-              span.c-badge.c-badge--sub-highlight 仮登録
           li.p-header__list-item
             .p-header__dropdown.js-dropdown
               = user_photo visitor, size:35, class_name: 'c-user-photo'
@@ -34,5 +37,6 @@ header#header.l-header
                   li.p-header__dropdown-item
                     <i class='fas fa-sign-out-alt fa-fw'></i>ログアウト
         - else
+          li.p-header__list-item = link_to 'ゲストユーザーとしてログイン', guest_logins_path, method: :post, class: 'c-hand-write-btn c-hand-write-btn--primary'
           li.p-header__list-item = link_to '新規登録', signup_path, class: 'c-hand-write-btn c-hand-write-btn--sub-highlight'
           li.p-header__list-item = link_to 'ログイン', login_path, class: 'c-link c-link--global-nav'
