--- a/app/views/tags/_sidebar.html.slim
+++ b/app/views/tags/_sidebar.html.slim
@@ -3,4 +3,4 @@
     p.c-badge.c-badge--tag = tag.name
   .p-tag-profile-contents__follow-btn
     - if visitor.logged_in?
-      follow-tag-button :tag-id="#{tag.id}" :is-followed="#{visitor.follow_tag?(tag)}" :followable="#{visitor.register?}"
+      follow-tag-button :tag-id="#{tag.id}" :is-followed="#{visitor.follow_tag?(tag)}" :followable="#{visitor.allowed?}"
