--- a/app/views/settings/account/index.html.slim
+++ b/app/views/settings/account/index.html.slim
@@ -12,8 +12,8 @@
           | 本登録が完了していません。本登録用メールから本登録を行ってください。
           br/
           | 本登録用メールを再送する場合は#{link_to 'こちらをクリックしてください', resend_emails_path, method: :post, remote: true, class: 'c-link'}
-    - if.visitor.guest?
-      p: strong.text-danger ゲストユーザーはメールアドレスの変更はできません
+    - if visitor.guest?
+      p.u-text-danger ゲストユーザーはメールアドレスの変更はできません
     -else
       .p-form-contents__submit: button.c-hand-write-btn 変更する
   .p-form-contents__item
@@ -25,7 +25,7 @@
     h3.u-text-bold
       <i class='fas fa-trash-alt fa-fw'></i>退会
     p.u-mb-3: strong 退会すると二度と元に戻せません。ご注意ください。
-    - if.visitor.guest?
-      p: strong.text-danger ゲストユーザーは退会できません
+    - if visitor.guest?
+      p.u-text-danger ゲストユーザーは退会できません
     -else
       = link_to '退会する', settings_quit_index_path, class: 'c-outline-btn c-outline-btn--danger'
