--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -3,7 +3,7 @@
 .p-about
   h1.p-about__header Asobiとは
   .p-about__description
-    p Asobiは様々なゲームのローカルルールや自分で考えた遊びを記録・共有するサービスです。
+    p Asobiは地元のローカルルールや自分で考えた遊びを記録・共有するサービスです。
   .p-about__features
     .p-about__feature
       .p-about__feature-left
